--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -37,10 +37,7 @@ spring:
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
-  logging:
-    level:
-      org.springframework.security.web.csrf: TRACE
-      org.springframework.security: DEBUG
+
   elasticsearch:
     username: ${ELASTIC_USERNAME}
     password: ${ELASTIC_PASSWORD}
@@ -48,6 +45,9 @@ spring:
 
   thymeleaf:
     cache: true
+  data:
+    redis:
+      url: ${REDIS_URL}
 
 toss:
   payment:
