--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,11 @@
 spring:
   application:
     name: pr1mary
-
+    jpa:
+      hibernate:
+        # update, create
+        ddl-auto: update
+      show-sql: true
   profiles:
     active: prod
 
